--- a/Site-Restaurant/about.html
+++ b/Site-Restaurant/about.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul>
                   <li class="home" ><a href="index.html" class="home" id="home">Home</a></li>
-                  <li> <a href="about.html" id="about" class="about1">About</a></li>
+                  <li class="about1"><a href="about.html" id="about" class="about1">About</a></li>
                   <li class="menu"> <a href="menu.html" id="menu">Menu</a></li>
                   <li class="contact"><a href="contact.html" id="contact">Contact</a></li>
                 </ul>
@@ -49,10 +49,10 @@
         </p>
          </article>
         <article class="diner">
-            <div class="un"><img src="ressources/images/dining-1.jpg" alt="dining-1"> <p>Can welcome up to 24 guests</p></div>
-            <div class="deux"><img src="ressources/images/dining-2.jpg" alt="dining-2"> <p>Can welcome up to 18 guests</p></div>
+            <div class="un"><img src="ressources/images/dining-1.jpg" alt="dining-1"> <p >Can welcome up to 24 guests</p></div>
+            <div class="deux"><img src="ressources/images/dining-2.jpg" alt="dining-2"> <p >Can welcome up to 18 guests</p></div>
             <div class="trois"><img src="ressources/images/dining-3.jpg" alt="dining-3"> <p>Can welcome up to 36 guests</p></div>
-            <div class="quatre"><img src="ressources/images/dining-4.jpg" alt="dining-4"> <p>Can welcome up to 50 guests</p></div>
+            <div class="quatre"><img src="ressources/images/dining-4.jpg" alt="dining-4"> <p >Can welcome up to 50 guests</p></div>
       
         </article>
     </main>
